# cli-commander

./: .gitignore  LICENSE  README.md  cli-commander.yml  cli-commander.yml.example  pyproject.toml  setup.py
.github/workflows/: publish.yml
cli_commander/: __init__.py  cli.py  config.py  executor.py  generate_configs.py
tests/: __init__.py  test_cli.py  test_config.py  test_executor.py
