[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-commander"
version = "0.1.0"
description = "A CLI tool for version controlled aliases inspired by dbt selectors"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "cli-commander"}
]
dependencies = [
    "PyYAML>=5.1",
]

[project.urls]
Homepage = "https://github.com/cli-commander/cli-commander"

[project.scripts]
cmdr = "cli_commander.cli:main"
